// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field component sanity matches default snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 8px;
  line-height: 1.5;
}

.c2:after {
  content: ' (optional)';
  font-weight: normal;
  font-style: italic;
}

.c3 {
  box-sizing: border-box;
  color: #3F3D4B;
  background-color: #fff;
  font-size: 1rem;
  line-height: initial;
  height: 3rem;
  padding: 16px;
  border: 1px solid transparent;
  border-color: #ccc;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c3:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c3:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.c3[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c3[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c3[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c3[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c3:valid {
  border-color: #28C081;
}

.was-validated .c3:valid ~ svg.icon-valid {
  visibility: visible;
  color: #28C081;
}

.was-validated .c3:invalid {
  border-color: #DC2C10;
}

.was-validated .c3:invalid ~ svg.icon-invalid {
  visibility: visible;
  color: #DC2C10;
}

<label
  class="c0"
  display="inline-flex"
>
  <div
    class="c1 c2"
    font-size="1"
    font-weight="3"
  >
    Input label
  </div>
  <input
    class="c3"
    color="text"
    font-size="1rem"
    height="3rem"
  />
</label>
`;

exports[`Field component sanity matches themed snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 8px;
  line-height: 1.5;
}

.c2:after {
  content: ' (optional)';
  font-weight: normal;
  font-style: italic;
}

.c3 {
  box-sizing: border-box;
  color: #3F3D4B;
  background-color: #fff;
  font-size: 1rem;
  line-height: initial;
  height: 3rem;
  padding: 16px;
  border: 1px solid transparent;
  border-color: #ccc;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c3:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c3:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.c3[type="color"] {
  min-width: 3rem;
  padding: 0;
}

.c3[type="color"]::-webkit-color-swatch-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
}

.c3[type="color"]::-webkit-color-swatch {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.c3[type="color"]::-moz-color-swatch {
  height: 2rem;
  width: 2rem;
  border: none;
  border-radius: 100%;
}

.was-validated .c3:valid {
  border-color: #28C081;
}

.was-validated .c3:valid ~ svg.icon-valid {
  visibility: visible;
  color: #28C081;
}

.was-validated .c3:invalid {
  border-color: #DC2C10;
}

.was-validated .c3:invalid ~ svg.icon-invalid {
  visibility: visible;
  color: #DC2C10;
}

<label
  class="c0"
  display="inline-flex"
>
  <div
    class="c1 c2"
    font-size="1"
    font-weight="3"
  >
    Themed input label
  </div>
  <input
    class="c3"
    color="text"
    font-size="1rem"
    height="3rem"
  />
</label>
`;
